# speech_d1

./: CMakeLists.txt  all_in_one_setup.sh
apps/: demo_fsm.cpp  local_arm_speech_control.cpp  tcp_arm_speech_control.cpp  test_tcp_client.cpp  test_tcp_server.cpp
include/: arm_fsm.hpp  arm_speech_control.hpp  fsmlist.hpp  tcp_arm_speech_control.hpp
include/arm_control/: arm_speech_control.hpp  tcp_arm_speech_control.hpp
include/fsm/: arm_fsm.hpp  fsmlist.hpp  grab_task.hpp
include/tcp/: tcp_socket.hpp
src/: arm_fsm.cpp  arm_speech_control.cpp  demo_fsm.cpp  local_arm_speech_control.cpp  tcp_arm_speech_control.cpp  tcp_socket.cpp  test_tcp_client.cpp  test_tcp_server.cpp
src/arm_control/: arm_speech_control.cpp
src/fsm/: arm_fsm.cpp  grab_task.cpp
src/msg/: ArmString_.cpp  PubServoInfo_.cpp
src/tcp/: tcp_socket.cpp
